Setting up class exercise

--- a/Cells.ipynb
+++ b/Cells.ipynb
@@ -48,6 +48,7 @@
     "    \"\"\"\n",
     "    Load in a grayscale image of the cells, where 1 is maximum brightness\n",
     "    and 0 is minimum brightness\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    filename: string\n",
@@ -73,29 +74,24 @@
     "    return cells_gray\n",
     "\n",
     "\n",
-    "def permute_labels(labels):\n",
-    "    \"\"\"\n",
-    "    Shuffle around labels by raising them to a prime and\n",
-    "    modding by a large-ish prime, so that cells are easier\n",
-    "    to see against their backround\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    labels: ndarray(M, N)\n",
-    "        An array of labels for the pixels in the image\n",
-    "    Returns\n",
-    "    -------\n",
-    "    labels_shuffled: ndarray(M, N)\n",
-    "        A new image where the labels are different but still\n",
-    "        the same within connected components\n",
-    "    \"\"\"\n",
-    "    return (labels**31) % 833\n",
+    "def get_centers(I, thresh):\n",
+    "    ## TODO: Fill this in\n",
+    "    clusters = []\n",
+    "    \n",
+    "    X = np.zeros((len(clusters), 2))\n",
+    "    for i in range(X.shape[0]):\n",
+    "        X[i, :] = np.mean(np.array(clusters[i]), 0)\n",
+    "    return X\n",
     "\n",
     "\n",
     "## TODO: Fill in your code here\n",
     "\n",
     "if __name__ == '__main__':\n",
+    "    cells_original = skimage.io.imread(\"Cells.jpg\")\n",
     "    I = load_cells_grayscale(\"Cells.jpg\")\n",
-    "    plt.imshow(I, cmap='magma')\n",
+    "    X = get_centers(I, 0.7)\n",
+    "    plt.imshow(cells_original, cmap='gray')\n",
+    "    plt.scatter(X[:, 1], X[:, 0])\n",
     "    plt.show()"
    ]
   },
